--- a/config.toml
+++ b/config.toml
@@ -94,7 +94,7 @@ prism_syntax_highlighting = true
 version_menu = "Releases"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/kairos-io/kairos"
+github_repo = "https://github.com/kairos-io/kairos-docs"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
 github_project_repo = "https://github.com/kairos-io/kairos"
 
