--- a/config.toml
+++ b/config.toml
@@ -111,8 +111,12 @@ algolia_docsearch = false
 offlineSearch = true
 
 [params.softwareVersions]
-k3s = "k3sv1.26.4+k3s1"
-kairos = "v2.1.0"
+# renovate: datasource=github-releases depName=kairos-io/provider-kairos
+provider_version = "2.0.3"
+# renovate: datasource=github-releases depName=k3s-io/k3s
+k3s_version = "k3sv1.21.4+k3s1"
+# renovate: datasource=github-releases depName=kairos-io/kairos
+kairos_version = "2.0.3"
 flavor = "debian"
 armFlavor = "alpine"
 registryURL = "quay.io/kairos"
