Automate auroraboot version
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/config.toml
+++ b/config.toml
@@ -119,6 +119,8 @@ k3s_version = "v1.26.4+k3s1"
 kairos_version = "v2.1.0"
 # renovate: datasource=github-releases depName=kairos-io/osbuilder
 osbuilder_version = "v0.6.6"
+# renovate: datasource=github-releases depName=kairos-io/AuroraBoot
+auroraboot_version = "v0.2.4"
 flavor = "debian"
 armFlavor = "alpine"
 registryURL = "quay.io/kairos"
