--- a/config.toml
+++ b/config.toml
@@ -169,6 +169,11 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
         icon = "fa fa-calendar"
         desc = "Join us in our Office hours!"
 [[params.links.user]]
+	name = "Kairos community"
+	url = "https://github.com/kairos-io/community"
+        icon = "fa fa-github"
+        desc = "Kairos community content"
+[[params.links.user]]
         name = "Slack"
         url = "https://join.slack.com/t/spectrocloudcommunity/shared_invite/zt-1k7wsz840-ugSsPKzZCP5gkasJ0kNpqw"
 	icon = "fab fa-slack"
