--- a/config.toml
+++ b/config.toml
@@ -171,7 +171,7 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 [[params.links.user]]
 	name = "Kairos community"
 	url = "https://github.com/kairos-io/community"
-        icon = "fa fa-github"
+        icon = "fab fa-github"
         desc = "Kairos community content"
 [[params.links.user]]
         name = "Slack"
