--- a/config.toml
+++ b/config.toml
@@ -128,6 +128,8 @@ registryURL = "quay.io/kairos"
 [params.ui]
 # Enable to show the side bar menu in its compact state.
 sidebar_menu_compact = true
+# Enable to show the foldable triangle
+sidebar_menu_foldable = true
 #  Set to true to disable breadcrumb navigation.
 breadcrumb_disable = false
 #  Set to true to hide the sidebar search box (the top nav search box will still be displayed if search is enabled)
