Add opengraph image
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/config.toml
+++ b/config.toml
@@ -55,6 +55,7 @@ id = "UA-00000000-0"
 [languages.en]
 title = "Kairos - The immutable Linux meta-distribution for edge Kubernetes"
 description = "The immutable edge Kubernetes"
+images = [ "images/kairos-800x419.png" ]
 languageName ="English"
 # Weight used for sorting.
 weight = 1
