Add twitter site
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/config.toml
+++ b/config.toml
@@ -60,6 +60,9 @@ languageName ="English"
 # Weight used for sorting.
 weight = 1
 
+[social]
+  twitter = "Kairos_OSS"
+
 [[menu.main]]
     name = "Contribute"
     weight = 50
