--- a/hugo.toml
+++ b/hugo.toml
@@ -125,6 +125,8 @@ auroraboot_version = "v0.2.6"
 flavor = "debian"
 armFlavor = "alpine"
 registryURL = "quay.io/kairos"
+exampleCoreImage = "opensuse:leap-15.5-core-amd64-generic"
+exampleStandardImage = "opensuse:leap-15.5-standard-amd64-generic"
 # User interface configuration
 [params.ui]
 # Enable to show the side bar menu in its compact state.
