--- a/hugo.toml
+++ b/hugo.toml
@@ -127,6 +127,7 @@ armFlavor = "alpine"
 registryURL = "quay.io/kairos"
 defaultFlavor = "opensuse"
 defaultFlavorRelease = "leap-15.5"
+defaultFrameworkRelease = "2.4.4"
 # User interface configuration
 [params.ui]
 # Enable to show the side bar menu in its compact state.
