--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,8 @@
   publish = "public"
   command = "scripts/build.sh"
 
+[build.environment]
+  HUGO_VERSION = "0.113.0"
 
 [build.environment]
 HUGO_VERSION = "0.113.0"
