--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,9 @@
 # Hugo build configuration for Netlify
 # (https://gohugo.io/hosting-and-deployment/hosting-on-netlify/#configure-hugo-version-in-netlify)
 
+[build.environment]
+HUGO_VERSION = "0.113.0"
+
 [[redirects]]
 from = "/docs/contribution-guidelines/"
 to = "https://github.com/kairos-io/kairos/blob/master/CONTRIBUTING.md"
