--- a/hugo.toml
+++ b/hugo.toml
@@ -44,7 +44,7 @@ anchor = "smart"
 [services]
 [services.googleAnalytics]
 # Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
-id = "UA-00000000-0"
+# id = "UA-00000000-0"
 
 # Language configuration
 
@@ -52,7 +52,7 @@ id = "UA-00000000-0"
 [languages.en]
 title = "Kairos - The immutable Linux meta-distribution for edge Kubernetes"
 description = "The immutable edge Kubernetes"
-images = [ "images/kairos-800x419.png" ]
+images = [ "images/kairos-800x419.jpeg" ]
 languageName ="English"
 # Weight used for sorting.
 weight = 1
@@ -80,6 +80,11 @@ twitter = "Kairos_OSS"
       # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
       style = "tango"
 # Everything below this are Site Params
+
+[minify]
+  disableCSS = true
+  disableHTML = false
+  disableJS = true
 
 [params]
 copyright = "Kairos authors"
