--- a/hugo.toml
+++ b/hugo.toml
@@ -115,7 +115,7 @@ provider_version = "v2.6.3"
 # renovate: datasource=github-releases depName=k3s-io/k3s
 k3s_version = "v1.29.0+k3s1"
 # renovate: datasource=github-releases depName=kairos-io/kairos
-kairos_version = "v3.0.0"
+kairos_version = "v3.0.1"
 # renovate: datasource=github-releases depName=kairos-io/osbuilder
 osbuilder_version = "v0.10.2"
 # renovate: datasource=github-releases depName=kairos-io/AuroraBoot
@@ -213,3 +213,7 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 [[params.versions]]
   version = "v3.0.0"
   url = "/v3.0.0/docs"
+
+[[params.versions]]
+  version = "v3.0.1"
+  url = "/v3.0.1/docs"
