--- a/hugo.toml
+++ b/hugo.toml
@@ -225,3 +225,7 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 [[params.versions]]
   version = "v3.0.3"
   url = "/v3.0.3/docs"
+
+[[params.versions]]
+  version = "v3.0.4"
+  url = "/v3.0.4/docs"
