--- a/hugo.toml
+++ b/hugo.toml
@@ -249,3 +249,7 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 [[params.versions]]
   version = "v3.0.9"
   url = "/v3.0.9/docs"
+
+[[params.versions]]
+  version = "v3.0.10"
+  url = "/v3.0.10/docs"
