--- a/hugo.toml
+++ b/hugo.toml
@@ -253,3 +253,7 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 [[params.versions]]
   version = "v3.0.10"
   url = "/v3.0.10/docs"
+
+[[params.versions]]
+  version = "v3.0.11"
+  url = "/v3.0.11/docs"
