landing_page: change wording and welcome text (#198)
* landing_page: change wording and welcome text

Signed-off-by: mudler <mudler@kairos.io>

* Add CNCF section

Signed-off-by: mudler <mudler@kairos.io>

* Change slack channels links

* Cleanup deprecated communication channels

Signed-off-by: mudler <mudler@kairos.io>

---------

Signed-off-by: mudler <mudler@kairos.io>

--- a/hugo.toml
+++ b/hugo.toml
@@ -159,11 +159,6 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 	icon = "fab fa-github"
         desc = "Development takes place here!"
 [[params.links.user]]
-	name = "Matrix"
-	url = "https://matrix.to/#/#kairos-io:matrix.org"
-        icon = "fa fa-message"
-        desc = "Join us on Matrix!"
-[[params.links.user]]
 	name = "GitHub discussions"
 	url = "https://github.com/kairos-io/kairos/discussions"
         icon = "fa fa-comments"
@@ -180,15 +175,9 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
         desc = "Kairos community content"
 [[params.links.user]]
         name = "Slack"
-        url = "https://join.slack.com/t/spectrocloudcommunity/shared_invite/zt-1k7wsz840-ugSsPKzZCP5gkasJ0kNpqw"
+        url = "https://slack.cncf.io/#kairos"
 	icon = "fab fa-slack"
         desc = "Join us on Slack!"
-[[params.links.user]]
-        name = "Newsletter"
-        url = "https://kairoslinux.substack.com/"
-	icon = "fa fa-envelope"
-        desc = "Subscribe to the newsletter!"
-
 
 # hugo module configuration
 
