--- a/hugo.toml
+++ b/hugo.toml
@@ -113,9 +113,9 @@ offlineSearch = true
 # renovate: datasource=github-releases depName=kairos-io/provider-kairos
 provider_version = "v2.6.5"
 # renovate: datasource=github-releases depName=k3s-io/k3s
-k3s_version = "v1.29.3+k3s1"
+k3s_version = "v1.30.2+k3s1"
 # renovate: datasource=github-releases depName=kairos-io/kairos
-kairos_version = "v3.0.14"
+kairos_version = "v3.1.0"
 # renovate: datasource=github-releases depName=kairos-io/osbuilder
 osbuilder_version = "v0.300.1"
 # renovate: datasource=github-releases depName=kairos-io/AuroraBoot
@@ -263,3 +263,7 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 [[params.versions]]
   version = "v3.0.14"
   url = "/v3.0.14/docs"
+
+[[params.versions]]
+  version = "v3.1.0"
+  url = "/v3.1.0/docs"
