--- a/hugo.toml
+++ b/hugo.toml
@@ -123,10 +123,12 @@ auroraboot_version = "v0.2.7"
 flavor = "debian"
 armFlavor = "alpine"
 registryURL = "quay.io/kairos"
+defaultBaseImage = "opensuse/leap:15.6"
+defaultFamily = "opensuse"
 defaultFlavor = "opensuse"
-defaultFlavorRelease = "leap-15.5"
+defaultFlavorRelease = "leap-15.6"
 # renovate: datasource=github-releases depName=kairos-io/kairos-framework
-defaultFrameworkRelease = "v2.7.31"
+defaultFrameworkRelease = "v2.9.2"
 # User interface configuration
 [params.ui]
 # Enable to show the side bar menu in its compact state.
