--- a/hugo.toml
+++ b/hugo.toml
@@ -104,24 +104,24 @@ offlineSearch = true
 
 [params.softwareVersions]
 # renovate: datasource=github-releases depName=kairos-io/provider-kairos
-provider_version = "v2.7.4"
+provider_version = "v2.7.5"
 # renovate: datasource=github-releases depName=k3s-io/k3s
 k3s_version = "v1.31.1+k3s1"
 # renovate: datasource=github-releases depName=kairos-io/kairos
-kairos_version = "v3.2.1"
+kairos_version = "v3.2.2"
 # renovate: datasource=github-releases depName=kairos-io/osbuilder
-osbuilder_version = "v0.300.3"
+osbuilder_version = "v0.400.3"
 # renovate: datasource=github-releases depName=kairos-io/enki
 enki_version = "v0.1.4"
 # renovate: datasource=github-releases depName=kairos-io/AuroraBoot
-auroraboot_version = "v0.2.7"
+auroraboot_version = "v0.3.1"
 flavor = "debian"
 registryURL = "quay.io/kairos"
 defaultFamily = "ubuntu"
 defaultFlavor = "ubuntu"
 defaultFlavorRelease = "24.04"
 # renovate: datasource=github-releases depName=kairos-io/kairos-framework
-defaultFrameworkRelease = "v2.10.2"
+defaultFrameworkRelease = "v2.14.3"
 # renovate: datasource=github-releases depName=rancher/system-upgrade-controller
 system_upgrade_controller = "v0.14.1"
 # User interface configuration
@@ -202,8 +202,12 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
   url = "/docs"
 
 [[params.versions]]
-  version = "v3.2.1"
-  url = "/v3.2.1/docs"
+  version = "v3.2.2"
+  url = "/v3.2.2/docs"
+
+[[params.versions]]
+  version = "v3.1.3"
+  url = "/v3.1.3/docs"
 
 [[params.versions]]
   version = "v3.0.14"
