--- a/hugo.toml
+++ b/hugo.toml
@@ -86,7 +86,7 @@ prism_syntax_highlighting = true
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
 # This menu appears only if you have at least one [params.versions] set.
-version_menu = "Releases"
+version_menu = "v3.1.3"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/kairos-io/kairos-docs"
@@ -101,6 +101,9 @@ github_branch = "main"
 
 # Enable Lunr.js offline search
 offlineSearch = true
+
+archived_version = true
+url_latest_version = "https://kairos.io/v3.3.1/docs"
 
 [params.softwareVersions]
 # renovate: datasource=github-releases depName=kairos-io/provider-kairos
@@ -198,8 +201,16 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 
 # Add your release versions here
 [[params.versions]]
-  version = "master"
+  version = "dev"
   url = "/docs"
+
+[[params.versions]]
+  version = "v3.1.3"
+  url = "/v3.1.3/docs"
+
+[[params.versions]]
+  version = "v3.2.4"
+  url = "/v3.2.4/docs"
 
 [[params.versions]]
   version = "v3.1.3"
@@ -208,7 +219,3 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 [[params.versions]]
   version = "v3.0.14"
   url = "/v3.0.14/docs"
-
-[[params.versions]]
-  version = "Other"
-  url = "/docs/announcements/releases"
