--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://kairos.io"
+baseURL = "https://kairos.io/"
 title = "Kairos"
 
 enableRobotsTXT = true
@@ -80,7 +80,7 @@ prism_syntax_highlighting = false
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
 # This menu appears only if you have at least one [params.versions] set.
-version_menu = "Releases"
+version_menu = "dev"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/kairos-io/kairos-docs"
@@ -96,13 +96,15 @@ github_branch = "main"
 # Enable Lunr.js offline search
 offlineSearch = true
 
+url_latest_version = "https://kairos.io/v3.3.1/docs"
+development = true
+
 [params.softwareVersions]
 # renovate: datasource=github-releases depName=kairos-io/provider-kairos
 provider_version = "v2.9.2"
 # renovate: datasource=github-releases depName=k3s-io/k3s
 k3s_version = "v1.32.1+k3s1"
-# renovate: datasource=github-releases depName=kairos-io/kairos
-kairos_version = "v3.3.1"
+kairos_version = "master"
 # renovate: datasource=github-releases depName=kairos-io/osbuilder
 osbuilder_version = "v0.401.0"
 # renovate: datasource=github-releases depName=kairos-io/AuroraBoot
@@ -191,7 +193,7 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 
 # Add your release versions here
 [[params.versions]]
-  version = "master"
+  version = "dev"
   url = "/docs"
 
 [[params.versions]]
@@ -205,7 +207,3 @@ no = 'Oh snap! Sorry to hear that. Please <a href="https://github.com/kairos-io/
 [[params.versions]]
   version = "v3.1.3"
   url = "/v3.1.3/docs"
-
-[[params.versions]]
-  version = "Other"
-  url = "/docs/announcements/releases"
