--- a/hugo.toml
+++ b/hugo.toml
@@ -105,6 +105,7 @@ provider_version = "v2.9.2"
 # renovate: datasource=github-releases depName=k3s-io/k3s
 k3s_version = "v1.32.1+k3s1"
 kairos_version = "master"
+google_cloud_image_version = "v3-2-1"
 # renovate: datasource=github-releases depName=kairos-io/osbuilder
 osbuilder_version = "v0.401.0"
 # renovate: datasource=github-releases depName=kairos-io/AuroraBoot
