--- a/hugo.toml
+++ b/hugo.toml
@@ -109,6 +109,8 @@ kairos_version = "master"
 osbuilder_version = "v0.401.0"
 # renovate: datasource=github-releases depName=kairos-io/AuroraBoot
 auroraboot_version = "v0.6.4"
+# renovate: datasource=github-releases depName=kairos-io/kairos-init
+kairos_init_version = "v0.4.4"
 flavor = "debian"
 registryURL = "quay.io/kairos"
 defaultFamily = "ubuntu"
