--- a/hugo.toml
+++ b/hugo.toml
@@ -102,6 +102,9 @@ github_branch = "main"
 # Enable Lunr.js offline search
 offlineSearch = true
 
+archived_version = true
+url_latest_version = "https://kairos.io/v3.4.2/docs"
+
 [params.softwareVersions]
 # renovate: datasource=github-releases depName=kairos-io/provider-kairos
 provider_version = "v2.9.2"
