--- a/hugo.toml
+++ b/hugo.toml
@@ -47,7 +47,7 @@ languageName ="English"
 # Weight used for sorting.
 weight = 1
 [languages.en.params]
-description = "The immutable edge Kubernetes"
+description = "Kairos is an open-source Linux-based operating system designed for securely running Kubernetes at the edge. It provides immutable, declarative infrastructure with features like P2P clustering, trusted boot, and A/B upgrades."
 images = [ "images/Kairos_800x419.png" ]
 
 # language not really in use just a hack to trigger the navbar-lang-selector which at the moment is used for distro selector
@@ -98,6 +98,9 @@ offlineSearch = true
 
 latest_version = "v3.4.2"
 development = true
+
+[params.robots]
+  llmsTXT = true
 
 [params.softwareVersions]
 # renovate: datasource=github-releases depName=kairos-io/provider-kairos
