Access documentation through drop down only
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -80,7 +80,7 @@ prism_syntax_highlighting = false
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
 # This menu appears only if you have at least one [params.versions] set.
-version_menu = "dev"
+version_menu = "Documentation"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/kairos-io/kairos-docs"
