--- a/hugo.toml
+++ b/hugo.toml
@@ -92,8 +92,8 @@ github_branch = "main"
 # Enable Lunr.js offline search
 offlineSearch = true
 
-latest_version = "v3.5.2"
-development = true
+latest_version = "v3.6.0"
+development = false
 
 [params.robots]
   llmsTXT = true
