--- a/hugo.toml
+++ b/hugo.toml
@@ -93,7 +93,7 @@ github_branch = "main"
 offlineSearch = true
 
 latest_version = "v3.6.0"
-development = true
+development = false
 
 [params.robots]
   llmsTXT = true
