--- a/hugo.toml
+++ b/hugo.toml
@@ -97,6 +97,7 @@ github_branch = "main"
 offlineSearch = true
 
 latest_version = "v3.6.0"
+url_latest_version = "https://kairos.io/v3.6.0/docs"
 
 [params.softwareVersions]
 # renovate: datasource=github-releases depName=kairos-io/provider-kairos
