install hugo in the workflow

--- a/.github/workflows/compare-migration-content.yml
+++ b/.github/workflows/compare-migration-content.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install Hugo
+        uses: peaceiris/actions-hugo@v3
+        with:
+          hugo-version: '0.152.2'
+          extended: true
+
       - name: Compare changed content pages
         shell: bash
         run: |
