build docusarus page on netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,7 @@
-# Hugo build configuration for Netlify
-# (https://gohugo.io/hosting-and-deployment/hosting-on-netlify/#configure-hugo-version-in-netlify)
 [build]
-  publish = "public"
-  command = "scripts/build.sh"
-
-[build.environment]
-  HUGO_VERSION = "0.123.7"
+  base = "docusaurus"
+  publish = "build"
+  command = "npm ci && npm run build"
 
 [[redirects]]
 from = "/docs/contribution-guidelines/"
