--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
-.hugo_build.lock
 node_modules/
-public/
-public_test/
-bin/
 .vscode/
-resources/
+
+# Docusaurus build/generated output
+build/
+.docusaurus/
+.cache-loader/
+
+# Local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
