update netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
-  base = "docusaurus"
+  base = "."
   publish = "build"
   command = "npm ci && npm run build"
 
 [build.environment]
-  NODE_VERSION = "20"
+  NODE_VERSION = "24.13.0"
 
 [[redirects]]
 from = "/v3.7.2/docs/*"
